# donna

./: AGENTS.md  Cargo.toml  README.md  architecture.md
.github/workflows/: rust.yml
SPEC/: 001-ephemeral-chat-and-memory-extraction.md  002-avatar-chat-ui.md  003-avatar-state-images.md  004-command-mode.md  005-chat-model-selection.md  006-configurable-prompts.md  007-toml-configuration.md  008-os-secret-storage.md  009-auth-cli-wizard.md  010-ai-provider-abstraction.md  011-sqlite-local-store.md  012-obsidian-markdown-integration.md  013-microsoft-graph-auth.md  014-outlook-mail-sync-and-send.md  015-teams-chat-sync-and-send.md  016-teams-channel-sync-and-send.md  017-calendar-sync-and-collision-detection.md  018-task-config-folder.md  019-markdown-task-prompts.md  020-background-cron-task-runner.md  021-todo-and-memory-model.md  022-privacy-and-action-approval.md  023-attention-and-popup-policy.md  024-people-and-follow-up-model.md  025-pre-meeting-briefings.md  026-post-meeting-capture.md  027-daily-planning-and-shutdown.md  028-local-search-and-retrieval.md  029-audit-log.md  030-sync-state-and-delta-sync.md  031-offline-mode.md  032-embedded-assets.md  033-prompt-injection-safety.md  034-notifications-and-window-raising.md  035-snooze-dismiss-and-feedback.md  036-user-documentation.md
assets/prompts/: system.md
docs/: usage.md
src/: app.rs  approval.rs  attention.rs  auth.rs  avatar.rs  chat.rs  command.rs  config.rs  ipc.rs  lib.rs  main.rs  memory.rs  model.rs  notes.rs  prompts.rs  secrets.rs
src/ai/: mod.rs  ollama.rs
tests/: obsidian_note_actions.rs
(+44 files in other folders)
